# coverage_example

./: CMakeLists.txt  README.md
.github/workflows/: coverage.yml
src/: bar.cpp  bar.hpp  foo.cpp  object.hpp
test/: test.cpp
